--- a/AndroidStudentClient/app/src/main/res/layout/activity_initial.xml
+++ b/AndroidStudentClient/app/src/main/res/layout/activity_initial.xml
@@ -2,24 +2,39 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/FullScreenStyle"
     android:background="@color/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.seuse16.destination.InitialActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="275dp"
-        android:layout_height="180dp"
+    <TextView
+        android:id="@+id/briefintroduction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginStart="71dp"
         android:layout_marginTop="8dp"
+        android:text="Software Architecture Theory  Course Project"
+        android:textColor="@color/White"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.304"
-        app:srcCompat="@drawable/logo" />
+        app:layout_constraintVertical_bias="0.985" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="277dp"
+        android:layout_height="181dp"
+        android:layout_marginBottom="262dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="156dp"
+        app:layout_constraintBottom_toTopOf="@+id/briefintroduction"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/initiallogo" />
 </android.support.constraint.ConstraintLayout>
