--- a/AndroidStudentClient/app/src/main/res/values/colors.xml
+++ b/AndroidStudentClient/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="LightGray">#DFDFDF</color>
     <color name="Pink">#ec407a</color>
     <color name="Blue">#3d5afe</color>
+    <color name="Red">#ff2f00</color>
 </resources>
