动态1功能测试并通过
简单的动态

--- a/AndroidStudentClient/app/src/main/res/layout/fragment_discovery_state.xml
+++ b/AndroidStudentClient/app/src/main/res/layout/fragment_discovery_state.xml
@@ -6,17 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".Main_Discovery_state">
 
-    <TextView
-        android:id="@+id/textView_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Coming soon..."
-        android:textColor="@color/Black"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ListView
+        android:id="@+id/listview_state"
+        android:layout_width="350dp"
+        android:layout_height="600dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
